fix z-index header (#217)

--- a/src/components/GSidebar/_GSidebar.scss
+++ b/src/components/GSidebar/_GSidebar.scss
@@ -21,7 +21,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1000;
+    z-index: 202;
     background: inherit;
     text-overflow: ellipsis;
 
